@@ -7,5 +7,8 @@
 #' included in the final patient profile report,
 #' in case this visualization is empty (no data available)
 #' for a specific subject.
+#' @param paramVar Character vector with variable(s) of \code{data} 
+#' with parameters. Variable content is displayed in the y-axis.
+#' @param paramLab Named character vector, with label for \code{paramVar}.
 #' @name patientProfilesVis-common-args
 NULL
